# note-summarizer-api

./: .gitignore  README.md  pyproject.toml
app/: main.py  test.py
app/db/: database.py
app/models/: summaries.py
